--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0 minimum-scale=1"
     />
-
-    <title>AQ Portfolio</title>
+ 
+    <title>Developer Ninjaa - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
